<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/con"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/map_filter_background"
    tools:context=".FilterMapFragment">


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp">

        <RadioButton
            android:id="@+id/bronze_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bronze" />

        <RadioButton
            android:id="@+id/silver_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/silver" />

        <RadioButton
            android:id="@+id/gold_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gold" />

        <RadioButton
            android:id="@+id/platinum_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/platinum" />

        <RadioButton
            android:id="@+id/diamond_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diamond" />

        <Button
            android:id="@+id/confirm_filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm" />
    </RadioGroup>

</FrameLayout>