<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_up_background"
    tools:context=".LoginActivity">




<!--    <ImageView-->
<!--        android:id="@+id/imageView2"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="437dp"-->
<!--        android:rotation="90"-->
<!--        android:scaleType="fitCenter"-->
<!--        android:src="@drawable/loginactivity_design_3"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->


    <com.caverock.androidsvg.SVGImageView
        android:id="@+id/my_image_view"
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:layout_marginTop="44dp"

        android:foreground="@drawable/loginactivity_horizontal"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="255dp"
        android:layout_height="48dp"
        android:layout_marginBottom="400dp"
        android:autofillHints="none"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_image_view" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="252dp"
        android:layout_height="53dp"
        android:autofillHints="none"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
        app:layout_constraintEnd_toEndOf="@+id/editTextName"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="@+id/editTextName"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        app:layout_constraintVertical_bias="0.53" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="436dp"
        android:layout_height="110dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="140dp"
        android:fontFamily="@font/kanit"
        android:text="catch me"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#FFFFFF"
        android:textSize="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/my_image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/my_image_view"
        app:layout_constraintVertical_bias="0.355" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginBottom="70dp"
        android:fontFamily="@font/kanit"
        android:text="if you can"
        android:textColor="#FFFFFF"
        android:textSize="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/my_image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.514" />

</androidx.constraintlayout.widget.ConstraintLayout>